k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: avaliator
  labels:
    app.kubernetes.io/part-of: avaliator
    app.kubernetes.io/managed-by: kubectl
